// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders fully 1`] = `
<React.Fragment>
  <AuthPopup />
  <UserBoxUnauthenticated
    onRegister={[Function]}
    onSignIn={[Function]}
    showRegisterButton={true}
  />
</React.Fragment>
`;

exports[`renders sso only 1`] = `null`;

exports[`renders sso only without logout button 1`] = `null`;

exports[`renders without logout button 1`] = `
<React.Fragment>
  <AuthPopup />
  <UserBoxUnauthenticated
    onRegister={[Function]}
    onSignIn={[Function]}
    showRegisterButton={true}
  />
</React.Fragment>
`;

exports[`renders without register button 1`] = `
<React.Fragment>
  <AuthPopup />
  <UserBoxUnauthenticated
    onSignIn={[Function]}
    showRegisterButton={false}
  />
</React.Fragment>
`;
